Tweaked basic gray affiliate style sheet to avoid wrapping of advanced search

--- a/app/stylesheets/affiliates/basic_gray.sass
+++ b/app/stylesheets/affiliates/basic_gray.sass
@@ -82,7 +82,7 @@ h1, h2, h3
       letter-spacing: 1px
       color: #555
       padding: 7px 10px
-      width: 300px      
+      width: 280px      
 
 #results
   float: left
